src/test/deca/context/invalid/unknown-identifier.deca
// Description:
//    Condition de la règle 0.1 non respectée, en essayant d'affecter une valeur a cquelque chose qui n'existe pas
//
// Resultats:
//    Erreur contextuelle
//    Ligne 9 : The variable x doesn't exist (rule 0.1)

{
    x = 1;
}